# GraphicPrograming

./: .gitignore  README.md
LearnOpenGL/: CMakeLists.txt  CMakePresets.json
LearnOpenGL/include/glad/: glad.h
LearnOpenGL/src/: glad.c  main.cpp
LearnOpenGL/src/Chap1.GettingStarted/: chap1.cpp  chap1P5.cpp  chap1P6.cpp  chap1P7.cpp  chap1P8.cpp  shader_source_p5.fs  shader_source_p6.fs  shader_source_p6.vs  shader_source_p7.fs
LearnOpenGL/src/Chap1.GettingStarted/camera/: camera.cpp
LearnOpenGL/src/Chap1.GettingStarted/shader/: shader.cpp  shader.h
LearnOpenGL/src/Chap2.Light/: chap2p01.cpp  chap2p02.cpp  shader_source_p1.fs  shader_source_p1.vs  shader_source_p2.fs  shader_source_p2.vs
LearnOpenGL/src/Chap2.Light/camera/: camera.cpp  camera.h
LearnOpenGL/src/Chap2.Light/shader/: shader.cpp  shader.h
P001Cubes/: index - Shortcut.lnk  main.vcxproj  main.vcxproj.filters
P001Cubes/data-files/: Q021.Scene.Any  Q022.Scene.Any  staircases.Scene.Any  whiteCube.Scene.Any
P001Cubes/journal/: journal.md.html
P001Cubes/source/: App.cpp  App.h  RayTracer.cpp  RayTracer.h  projectsSpecification.cpp  projectsSpecification.h
